# sheaf

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  Makefile  README.md  SECURITY.md  go.mod  its-not-the-model.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  report-regen.yml  security.yml
cmd/audit-edges/: main.go
cmd/dump-elements/: main.go
cmd/dump-profile/: main.go
cmd/emit-conceptdoc/: main.go
cmd/emit-grounding/: main.go
cmd/ghdocs-normalize/: main.go  main_test.go
cmd/kubectl-yamlgen/: main.go  main_test.go
cmd/rescan-coverage/: main.go
cmd/scanner/: main.go
cmd/sheaf/: main.go
cmd/sheaf-adapter-gotest/: main.go
cmd/sheaf-mcp-bench/: main.go
docs/: adapter-protocol.md  architecture.md  config.md  faq.md  scan-your-repo.md  verifying-releases.md
docs/cli/: self-monitoring.md  sheaf.md  (+1 more)
internal/adapters/pwfacade/testdata/basic/pw_chrono/: BUILD.gn
internal/adapters/pwfacade/testdata/basic/pw_chrono_stl/: BUILD.gn
proto/: adapterplugin.proto  categorization.proto  common.proto  config.proto  contract.proto  coverage_profile.proto  doc_claim.proto  finding.proto  generate.sh  grounding.proto  test_case.proto
scripts/: check-example-reports.sh  coverage_overlay.py  gen-ffx-coverage-inputs.py  gen-fuchsia-concept-docs.py  gen-fuchsia-coverage.py  generate-fuchsia-manifest.sh  generate-pigweed-manifest.sh  regen-example-reports.sh
(+516 files in other folders)
